--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,11 @@ dependencies:
   shared_preferences: ^2.0.13
   intl: ^0.17.0
   csv: ^5.0.1
-  dio: ^4.0.4
+
   http: ^0.13.4
   pie_chart: ^5.3.1
   file_picker: ^6.1.1
+  dio: ^5.4.2+1
 
 dev_dependencies:
   flutter_test:
